<resources>
    <string name="app_name">DStock</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="email" font="@font/convergence">Email</string>
    <string name="password" font="@font/convergence">Contraseña</string>
    <string name="login" font="@font/convergence">Iniciar Sesión</string>
    <string name="surname" font="@font/convergence">Apellido(s)</string>
    <string name="name" font="@font/convergence">Nombre(s)</string>
    <string name="phone" font="@font/convergence">Movil</string>
    <string name="address" font="@font/convergence">Dirección</string>
    <string name="birthday" font="@font/convergence">Fecha de nacimiento</string>

    <string name="signin_form_email">El email no es válido</string>
    <string name="signin_error_realname">Debe contener al menos 6 caracteres</string>
    <string name="signin_form_password">Las 2 contraseñas deben ser iguales</string>
    <string name="signin_error_dialog_body">No hemos podido crear tu cuenta, intentálo de nuevo más tarde</string>

    <string name="verification_check_email">Para acceder a la aplicación verifica tu correo electrónico(recuerda mirar en SPAM)</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_home">Menú Principal</string>
    <string name="navigation_drawer_scan">Escaneo</string>
    <string name="navigation_drawer_profile">Perfil</string>
    <string name="navigation_drawer_about">Acerca de nosotros</string>
    <string name="navigation_drawer_share">Compartir</string>
    <string name="navigation_drawer_logout">Cerrar sesión</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_floating">Description Floating</string>
    <string name="nav_inventory" font="@font/convergence">Inventario</string>
    <string name="nav_providers" font="@font/convergence">Proveedores</string>

    <string name="btn_add_category">Añadir Categoría</string>
    <string name="btn_add_subcategory">Añadir Subcategoría</string>
    <string name="btn_add_provider">Añadir Proveedor</string>
    <string name="flbtn_add_product">Añadir Producto</string>

    <string name="text_empty_state">Estado Vacío</string>
    <string name="areu_sure">¿Estas segur@?</string>

    <string name="name_product" font="@font/convergence">Nombre:</string>
    <string name="quantity_product" font="@font/convergence">Cantidad:</string>
    <string name="weight_product" font="@font/convergence">Peso:</string>
    <string name="price_product" font="@font/convergence">Precio Unidad:</string>
    <string name="provider_product" font="@font/convergence">Proveedor:</string>
    <string name="category_product" font="@font/convergence">Categoría:</string>
    <string name="subcategory_product" font="@font/convergence">Subcategoría:</string>

    <string name="address_provider" font="@font/convergence">Dirección:</string>
    <string name="phone_provider" font="@font/convergence">Móvil:</string>
    <string name="email_provider" font="@font/convergence">Correo:</string>
    <string name="orders_provider" font="@font/convergence">Pedidos:</string>

    <string name="delete" font="@font/convergence">Eliminar</string>
    <string name="save_change" font="@font/convergence">Guardar Cambios</string>
    <string name="cancel" font="@font/convergence">Cancelar</string>
    <string name="add" font="@font/convergence">Añadir</string>

    <string name="new_order" font="@font/convergence">Nuevo Pedido</string>
    <string name="date_order" font="@font/convergence">Fecha de llegada:</string>
    <string name="make_order" font="@font/convergence">Realizar Pedido</string>

    <string name="gmail" font="@font/convergence">Gmail</string>
    <string name="call" font="@font/convergence">Llamada</string>

    <string name="Used_Products" font="@font/convergence">Productos más usados</string>

    <string name="surname_profile" font="@font/convergence">Apellidos:</string>
    <string name="birthday_profile" font="@font/convergence">Fecha de nacimiento:</string>
    <string name="joinedDate_profile" font="@font/convergence">Fecha de registro:</string>
    <string name="edit_profile" font="@font/convergence">Editar Perfil</string>

    <string name="required" font="@font/convergence">*Requerido</string>
    <string name="Scan" font="@font/convergence">Escaneo</string>

    <string name="email_Register" font="@font/convergence">Correo</string>
    <string name="confirmPassword_Register" font="@font/convergence">Confirmar Contraseña</string>
    <string name="continue_Register" font="@font/convergenece">Continuar</string>
    <string name="information_add" font="@font/convergence">Información Adicional</string>
    <string name="skip" font="@font/convergence">Omitir</string>
    <string name="upload_image" font="@font/convergence">Subir Foto de perfil</string>

    <string name="register" font="@font/convergence">Regístrate</string>
    <string name="orRegister" font="@font/convergence">o regístrate con</string>

    <string name="verification_Message">Para acceder a la aplicación verifica tu correo (recuerda mirar la carpeta SPAM)</string>

    <string name="greetings">¡Hola, %1s!</string>

    <string name="empty_list">Lista vacía</string>
    <string name="add_category">Añade categorías</string>
    <string name="add_provider">Añade proveedores</string>
    <string name="add_product">Añade productos</string>

    <string name="add_product_name">Nombre</string>
    <string name="add_product_quantity">Cantidad</string>
    <string name="add_product_weight">Peso</string>
    <string name="add_product_price">Precio</string>
    <string name="add_product_perprice">Precio por unidad</string>
    <string name="add_product_perweight">Peso por unidad</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>

    <string name="inventory">Inventario</string>

    <string name="default_web_client_id">853853576865-on150onffgord9sjufbhkdvh86m93tqr.apps.googleusercontent.com</string>

    <string name="category">Categoría</string>

    <string name="add_category_name">Nombre:</string>

    <string name="add_subcategory">Añadir Subcategoria </string>

    <string name="category_products">%1$s (%2$d)</string>
    <string name="order">Pedido</string>
    <string name="quantity">%2$d</string>

    <string name="order_action">Pedir</string>
    <string name="add_product_perprice_">Precio por unidad:</string>
    <string name="add_product_perweight_">Peso por unidad:</string>
    <string name="add_product_price_">Precio:</string>
    <string name="add_product_stock_">Stock:</string>

    <string name="product_name_format">%1$s</string>
    <string name="product_quantity_format">%1$d</string>
    <string name="product_price_format">%.1f %2$s</string>
    <string name="product_weight_format">%.1f %2$s</string>
    <string name="product_category_format">%1$s</string>
    <string name="product_provider_format">%1$s</string>
    <string name="product_subcategory_format">%1$s</string>

    <string name="order_Date">Fecha de llegada (DD/MM)</string>

    <string name="products_">Productos:</string>

    <string name="look_product">Ver producto</string>

    <string name="name_provider">Nombre del proveedor</string>
    <string name="product_price_formats">%.1f</string>
    <string name="product_weight_formats">%.1f</string>
    <string name="product_quantity_formats">%.1$d</string>

    <string name="contact">Contactar Proveedor</string>

    <string name="whatsapp">Whatsapp</string>

    <string name="our_mission">Nuestra Misión</string>
    <string name="and_purpose">y Propósito</string>

    <string name="mission_purpose">Nuestra misión es simplificar la gestión de inventarios para pequeñas empresas,
        ayudándolas a ahorrar tiempo y reducir errores. La idea nació al ver los retos de usar métodos tradicionales
        como hojas de cálculo, inspirándonos a crear una solución moderna y confiable.</string>

    <string name="contact_us">Contáctanos</string>

    <string name="contact_us_text">Tu opinión es valiosa para nosotros. Si tienes sugerencias, preguntas o necesitas soporte,
        no dudes en contactarnos</string>

    <string name="Orders">Pedidos</string>

    <string name="Providers">Proveedores</string>

    <string name="State">Estado</string>

    <string name="Look_orders">Ver pedidos</string>

    <string name="Look_providers">Ver proveedores</string>

    <string name="Look_products">Ver productos</string>

    <string name="no_orders">No hay pedidos pendientes</string>

    <string name="no_providers">No hay proveedores pendientes</string>

    <string name="no_data">Sin datos</string>

    <string name="no_actual_orders">No hay pedidos</string>

    <string name="quantity_">Cantidad</string>

    <string name="forgot_password">¿Olvidaste tu contraseña?</string>

    <string name="clear_search">Buscar</string>

    <string name="search_products">Buscar productos</string>

    <string name="search_providers">Buscar proveedores</string>

    <string name="add_product_barcode">Código de barras</string>
</resources>