...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <Button
            android:id="@+id/btnLoginScreen"
            android:layout_width="307dp"
            android:layout_height="81dp"
            android:fontFamily="@font/convergence"
            style="@style/AlternativeButton"
            android:text="@string/login"
            android:textSize="25sp"
...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.219"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/backgroundColor2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/convergence"
                android:hint="@string/email_Register"
                android:inputType="textWebEmailAddress"
                android:lines="1"
...
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/backgroundColor2"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/backgroundColor2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/convergence"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
...
